multicluster-gke/vm-migration/cluster1/service-entries.yaml

# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START istio_dual_control_plane_cluster1_serviceentry_frontendservice_entry]
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: frontendservice-entry
spec:
  addresses:
  - 240.0.0.5
  endpoints:
  - address: 34.75.176.213
    ports:
      http1: 15443
  hosts:
  - frontend.default.global
  location: MESH_INTERNAL
  ports:
  - name: http1
    number: 80
    protocol: http
  resolution: DNS
# [END istio_dual_control_plane_cluster1_serviceentry_frontendservice_entry]
---
# [START istio_dual_control_plane_cluster1_serviceentry_cartservice_entry]
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cartservice-entry
spec:
  addresses:
  - 240.0.0.7
  endpoints:
  - address: 34.75.176.213
    ports:
      grpc: 15443
  hosts:
  - cartservice.default.global
  location: MESH_INTERNAL
  ports:
  - name: grpc
    number: 7070
    protocol: GRPC
  resolution: DNS
# [END istio_dual_control_plane_cluster1_serviceentry_cartservice_entry]
---
